syntax = "proto3";

import "DTO/time_slot_control_data.proto";
import "DTO/trace_data.proto";

option csharp_namespace = "Proto.Notifications.UseCase";

service NotificationService {
  rpc SendSprintSelectionChanged(SprintSelectionChangedNotification) returns (NotificationResponse);
  rpc SendTimeSlotControlCreated(TimeSlotControlCreatedNotification) returns (NotificationResponse);
}

service UseCaseNotificationService {
  rpc SubscribeUseCaseNotifications(SubscribeRequest) returns (stream UseCaseNotification);
}

message UseCaseNotification {
  oneof notification {
    SprintSelectionChangedNotification sprintSelectionChanged = 1;
    TimeSlotControlCreatedNotification timeSlotControlCreated = 2;
  }
}

message SprintSelectionChangedNotification {
  TraceDataProto traceData = 1;
}

message TimeSlotControlCreatedNotification {
  TimeSlotControlDataProto time_slot_control_data = 1;
  TraceDataProto traceData = 2;
}

message NotificationResponse {
  bool success = 1;
}

message SubscribeRequest {}
