syntax = "proto3";

option csharp_namespace = "Proto.Notifications.Settings";

package Proto.Notifications.Settings;

service NotificationService {
  rpc SendSettingsCreated(SettingsCreatedNotification) returns (NotificationResponse);
  rpc SendExportPathChanged(ExportPathChangedNotification) returns (NotificationResponse);
  rpc SendAutomaticTicketAddingChanged(AutomaticTicketAddingToSprintChangedNotification) returns (NotificationResponse);
}

service SettingsNotificationService {
  rpc SubscribeSettingsNotifications(SubscribeRequest) returns (stream SettingsNotification);
}

message SettingsNotification {
  oneof notification {
    SettingsCreatedNotification settingsCreated = 1;
    ExportPathChangedNotification exportPathChanged = 2;
    AutomaticTicketAddingToSprintChangedNotification automaticTicketAddingChanged = 3;
  }
}

message SubscribeRequest {}

message SettingsCreatedNotification {
  string settingsId = 1;
  string exportPath = 2;
  bool isAddNewTicketsToCurrentSprintActive = 3;
}

message ExportPathChangedNotification {
  string settingsId = 1;
  string exportPath = 2;
}

message AutomaticTicketAddingToSprintChangedNotification {
  string settingsId = 1;
  bool isAddNewTicketsToCurrentSprintActive = 2;
}

message NotificationResponse {
  bool success = 1;
}
